--- a/templates/issue/issue_form.html.twig
+++ b/templates/issue/issue_form.html.twig
@@ -12,26 +12,19 @@
             </ul>
         </div>
     </nav>
-    <div id="issue-container" style="margin-top:10%;">
-        <div class="row">
-                <div class="col s12 m6 offset-m3">
-                    <div class="card center-align mg">
-                        <div class="card-content">
-                            {{ form_start(form) }}
-                            {{ form_errors(form) }}
-                            {{ form_row(form.name) }}
-                            {{ form_row(form.description) }}
-                            {{ form_row(form.difficulty) }}
-                            {{ form_row(form.priority) }}
-                            {#{{ form_widget(form.priority)}}#}
-                            {{ form_row(form.status) }}
-                            <button id="project-button" class="btn waves-effect waves-light"  type="submit">Créer</button>
-                            <a class="btn waves-effect waves-light red" href="/home">Annuler</a>
-                            {{ form_end(form) }}
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div id="issue-container" class="container border rounded" style="margin-top:10%; max-width:750px;">
+        <div style="margin-top:15px; margin-bottom:15px;">
+            {{ form_start(form) }}
+            {{ form_errors(form) }}
+            {{ form_row(form.name) }}
+            {{ form_row(form.description) }}
+            {{ form_row(form.difficulty) }}
+            {{ form_row(form.priority) }}
+            {#{{ form_widget(form.priority)}}#}
+            {{ form_row(form.status) }}
+            <button type="submit" class="btn btn-primary btn-dark">Créer l'issue</button>
+            <a class="btn waves-effect waves-light red" href="/home">Annuler</a>
+            {{ form_end(form) }}
         </div>
     </div>
 
