ajout du  style bootstrap à project_details et project_member

--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -11,7 +11,7 @@
             <div class="col sm-6" >
                 <div class="card">
                     <div class="card-body">
-                    <p style="display:inline-block;" class="card-title">Mes projets :</p>
+                        <p style="display:inline-block;" class="card-title"><b>Mes projets :</b></p>
                     {% if myProjects is not empty %}
                         <div class="list-group">
                             {% for project in myProjects %}
@@ -28,7 +28,7 @@
                        <div class="col sm-6">
                            <div class="card">
                                <div class="card-body">
-                                   <p style="display:inline-block;" class="card-title">Mes projets associés :</p>
+                                   <p style="display:inline-block;" class="card-title"><b>Mes projets associés :</b></p>
                     {% if myLinkedProjects is not empty %}  
                         
                         <div class="list-group">
