--- a/templates/project/project_members.html.twig
+++ b/templates/project/project_members.html.twig
@@ -1,24 +1,34 @@
-<ul class="collection with-header">
-    <li class="collection-header"><h5>Liste des membres</h5></li>
-    {% if members is not empty %}
-        {% for member in members %}
-            <li class="collection-item">
-                <div>
-                    <a href="mailto:{{ member.emailAddress }}">
-                        {{ member.name }}
+<div id="project-member-container" style="margin-top:10%;">
+        <div class="col sm-6" >
+            <div class="card">
+                <div class="card-body">
+                    <p style="display:inline-block;" class="card-title"><h5>Liste des membres</h5></p>
+                         {% if members is not empty %}
+                                 {% for member in members %}
+                    <div class="list-group">
+
+                    <a href="mailto:{{ member.emailAddress }}" class="list-group-item list-group-item-action"><b>   {{ member.name }}</b>
+
                     </a>
                     <a href="{{ path('deleteMember', {'projectId': project.id, 'memberId': member.id}) }}"
-                       class="secondary-content">&times;</a>
+                        class="list-group-item list-group-item-secondary">&times;</a>
                 </div>
-            </li>
+
         {% endfor %}
+
     {% else %}
-        <li class="collection-item">Aucun collaborateur</li>
+
+        <div class="list-group-item list-group-item-action">Aucun collaborateur</div>
     {% endif %}
-    <li class="collection-item">
+                    <p style="display:inline-block;" class="card-text"><h5>Inviter un membre</h5></p>
         <form action="{{ path('inviteToProject', {'id': project.id}) }}" method="POST">
-            <input type="text" placeholder="Inviter un membre" name="memberEmail">
-            <button type="submit" class="btn waves-effect">Inviter ce membre</button>
+            <div class="form-group">
+            <input type="email" class="form-control"  placeholder="Inviter un membre" name="memberEmail">
+            </div>
+            <button type="submit" class="btn btn-primary">Inviter ce membre</button>
+
         </form>
-    </li>
-</ul>
+                </div>
+            </div>
+        </div>
+    </div>
