--- a/templates/project/creation.html.twig
+++ b/templates/project/creation.html.twig
@@ -9,11 +9,15 @@
    <div id="project-container" class="container border rounded" style="margin-top:10%; max-width:750px;">
         <div style="margin-top:15px; margin-bottom:15px;">
             {{ form_start(form) }}
-            {{ form_errors(form) }}
-            {{ form_row(form.name) }}
-            {{ form_row(form.description) }}
-
-            <button type="submit" class="btn btn-primary btn-dark">Créer le Projet</button>
+                <h3>Nouveau projet :</h3>
+                {{ form_errors(form) }}
+                <div class="form-group">
+                    {{ form_row(form.name) }}
+                </div>
+                <div class="form-group">
+                    {{ form_row(form.description) }}
+                </div>
+                <button type="submit" class="btn btn-primary btn-dark">Créer le Projet</button>
             {{ form_end(form) }}
         </div>
     </div>
