--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -6,7 +6,7 @@
 
     {% include 'app_header.html.twig' %}
     
-    <div id="project-list-container" style="margin-top:10%;">
+    <div id="project-list-container" class="container" style="margin-top:10%;">
         <div class="row">
             <div class="col sm-6" >
                 <div class="card">
