--- a/templates/project/project_details.html.twig
+++ b/templates/project/project_details.html.twig
@@ -6,7 +6,7 @@
 
     {% include 'app_header.html.twig' %}
 
-    <div id="login-container" style="margin-top:10%;">
+    <div id="login-container" class="container" style="margin-top:10%;">
         <div  class="row align-items-center" >
             <div class="col sm-6" >
                 <div class="card" >
