--- a/templates/member/register.html.twig
+++ b/templates/member/register.html.twig
@@ -9,39 +9,33 @@
     <div id="register-container" class="container border rounded" style="margin-top:10%; max-width:750px;">
         <div style="margin-top:15px; margin-bottom:15px;">
             {{ form_start(form) }}
-                <h3>Inscription :</h3>
-                {{ form_errors(form) }}
-                <div class="form-group">
-                    {{ form_row(form.name) }}
-                </div>
-                <div class="form-group">
-                    {{ form_row(form.emailAddress) }}
-                </div>
-                <div class="form-group">
-                    {{ form_row(form.password) }}
-                </div>
-                <button type="submit" class="btn btn-primary btn-dark">S'enregister</button>
+            <h3>Inscription :</h3>
+            {{ form_errors(form) }}
+            {{ form_row(form.name) }}
+            {{ form_row(form.emailAddress) }}
+            {{ form_row(form.password) }}
+            <button type="submit" class="btn btn-primary btn-dark">S'enregister</button>
             {{ form_end(form) }}
         </div>
     </div>
 
-            
-            
-        </div>
+
+
+    </div>
     </div>
 {% endblock %}
 
 {% block javascripts %}
-    <script defer>
-        let password = document.getElementById("password");
-        let password_confirm = document.getElementById("password_confirm");
+    <script>
+        let password = document.getElementById("registration_password_first");
+        let password_confirm = document.getElementById("registration_password_second");
 
         function validatePassword(){
-        if(password.value !== password_confirm.value) {
-            password_confirm.setCustomValidity("Les mots de passe sont différents");
-        } else {
-            password_confirm.setCustomValidity('');
-        }
+            if(password.value !== password_confirm.value) {
+                password_confirm.setCustomValidity("Les mots de passe sont différents");
+            } else {
+                password_confirm.setCustomValidity('');
+            }
         }
 
         password.onchange = validatePassword;
