Correction Entity Invitation et ajout exception d'invitation

--- a/templates/app_header.html.twig
+++ b/templates/app_header.html.twig
@@ -31,7 +31,7 @@
     {{ error }}
     </div>
 {% elseif success is defined and success is not null  %}
-    <div class="alert alert-success" container" role="alert" style="margin-top:10%;">
+    <div class="alert alert-success container" role="alert" style="margin-top:10%;">
     {{ success }}
     </div>
 {% endif %}
