--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -5,6 +5,16 @@
 {% block body %}
 
     {% include 'app_header.html.twig' %}
+
+    {% if myInvitations is not empty %}
+    <div id="invitation-list-container" class="container" style="margin-top:10%;">
+        {% for myInvitation in myInvitations %}
+            <div class="alert alert-secondary" role="alert">
+                <a href="{{ path('acceptInviteToProject', {'invitationKey': myInvitation.invitationKey}) }}">Vous êtes invité à rejoindre le projet de {{ myInvitation.project.owner.name }} -> {{ myInvitation.project.name }}</a>
+            </div>
+        {% endfor %}
+    </div>
+    {% endif %}
     
     <div id="project-list-container" class="container" style="margin-top:10%;">
         <div class="row">
