--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -3,8 +3,6 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-
-    {% include 'app_header.html.twig' %}
     
     <div id="project-list-container" class="container" style="margin-top:10%;">
         <div class="row">
@@ -13,7 +11,7 @@
                     <div class="card-body">
                         <p style="display:inline-block;" class="card-title"><b>Mes projets :</b></p>
                     {% if myProjects is not empty %}
-                        <div class="list-group">
+                        <div class="list-group" id="project">
                             {% for project in myProjects %}
                                 <a href="{{ path('projectDetails', {'id': project.id}) }}" class="list-group-item list-group-item-action"><b>{{ project.name }}</b> : {{ project.description }} </a>
                             {% endfor %}
