--- a/templates/project/project_details.html.twig
+++ b/templates/project/project_details.html.twig
@@ -1,12 +1,10 @@
-{% extends "base.html.twig" %}
+{% extends 'project_frame.html.twig' %}
 
 {% block title %}Informations projet - {{ project.name }}{% endblock %}
 
-{% block body %}
+{% block content %}
 
-    {% include 'app_header.html.twig' %}
-
-    <div id="login-container" class="container" style="margin-top:10%;">
+    <div id="login-container" class="container" style="padding-top:10%;">
         <div class="row">
             <div class="col-sm-6 col-lg-8">
                 <div class="card">
@@ -43,4 +41,3 @@
 
 
 {% endblock %}
-
