--- a/templates/app_header.html.twig
+++ b/templates/app_header.html.twig
@@ -1,37 +1,40 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="{{ path('dashboard') }}">FireScrum</a>
-        {% if user is defined %}  
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            {% if user is defined %}
+                <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link {% if app.request.attributes.get('_route') == 'dashboard' %} active{% endif %}" href="{{ path('dashboard') }}">Liste des projets</a>
                     <a class="nav-item nav-link {% if app.request.attributes.get('_route') == 'createProject' %} active{% endif %}" href="{{ path('createProject') }}">Nouveau projet</a>
-                    <a class="nav-item nav-link {% if app.request.attributes.get('_route') == 'logout' %} active{% endif %}" href="{{ path('logout') }}">Se déconnecter</a>
                 </div>
-            </div>
-            <span class="navbar-text">
-            Connecté en tant que {{user.name | default('')}}
-            </span>
-        {% else %} 
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="dropdown px-lg-3">
+                    <a href="#" class="dropdown-toggle navbar-text" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Connecté en tant que {{user.name | default('')}}
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{{ path('logout') }}">Se déconnecter</a>
+                    </div>
+                </div>
+            {% else %}
                 <div class="navbar-nav">
                     <a class="nav-item nav-link {% if app.request.attributes.get('_route') == 'login' %} active{% endif %}" href="{{ path('login') }}">Se connecter</a>
                     <a class="nav-item nav-link {% if app.request.attributes.get('_route') == 'register' %} active{% endif %}" href="{{ path('register') }}">Créer un compte</a>
                 </div>
-            </div>
-        {% endif %} 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            {% endif %}
+        </div>
     </nav>
 </header>
 
-{% if error is defined and error is not null %}  
+{% if error is defined and error is not null %}
     <div class="alert alert-danger container" role="alert" style="margin-top:10%;">
-    {{ error }}
+        {{ error }}
     </div>
 {% elseif success is defined and success is not null  %}
     <div class="alert alert-success container" role="alert" style="margin-top:10%;">
-    {{ success }}
+        {{ success }}
     </div>
 {% endif %}
