--- a/templates/app_header.html.twig
+++ b/templates/app_header.html.twig
@@ -1,6 +1,10 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{{ path('dashboard') }}">FireScrum</a>
+        <a class="navbar-brand" href="{{ path('dashboard') }}">
+        <img id="logo" src="{{ asset('build/images/fire.svg') }}" title="FireScrum" alt="Logo FireScrum" width="30" height="30" class="d-inline-block align-top"/>
+        FireScrum
+        </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
