--- a/templates/project/project_members.html.twig
+++ b/templates/project/project_members.html.twig
@@ -9,13 +9,16 @@
                             <a href="mailto:{{ member.emailAddress }}">
                                 {{ member.name }}
                             </a>
-                            <a href="{{ path('deleteMember', {'projectId': project.id, 'memberId': member.id}) }}">&times;</a>
+                            {% if status is defined and status == "owner" %}
+                                <a href="{{ path('deleteMember', {'projectId': project.id, 'memberId': member.id}) }}">&times;</a>
+                            {% endif %}
                         </li>
                     {% endfor %}
                 {% else %}
                     <li class="list-group-item">Aucun collaborateur</li>
                 {% endif %}
             </ul>
+            {% if status is defined and status == "owner" %}
             <h5 class="mb-3 mt-4">Inviter un membre</h5>
             <form action="{{ path('inviteToProject', {'id': project.id}) }}" method="POST">
                 <div class="form-group">
@@ -23,6 +26,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Inviter ce membre</button>
             </form>
+            {% endif %}
         </div>
     </div>
 </div>
